--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.js": [
+      "standard"
+    ]
   },
   "repository": {
     "type": "git",
@@ -18,6 +24,10 @@
   },
   "homepage": "https://github.com/walterPereiraGomes/node-clean-api#readme",
   "devDependencies": {
+    "husky": "^7.0.4",
     "standard": "^16.0.4"
+  },
+  "dependencies": {
+    "lint-staged": "^12.1.2"
   }
 }
