--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/walterPereiraGomes/node-clean-api#readme",
   "devDependencies": {
     "husky": "^7.0.4",
+    "jest": "^27.4.5",
     "standard": "^16.0.4"
   },
   "dependencies": {
