--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "jest",
     "prepare": "husky install"
   },
+  "standard": {
+    "env": ["jest"]
+  },
   "lint-staged": {
     "*.js": [
       "standard"
