add unique config to unit and integration tests

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --silent --colors --noStackTrace",
-    "test:unit": "npm test --",
+    "test": "jest --silent --colors --noStackTrace --passWithNoTests",
+    "test:unit": "npm test -- -c jest-unit-config.js",
+    "test:integration": "npm test -- -c jest-integration-config.js",
     "test:staged": "npm test --",
     "prepare": "husky install",
     "test:ci": "jest --coverage --silent --noStackTrace"
